covered-css-minification fix fontawesome

--- a/assets/covered-css/fontawesome.css
+++ b/assets/covered-css/fontawesome.css
@@ -1,1 +1,112 @@
-.fa,.fab,.fal,.far,.fas{-moz-osx-font-smoothing:grayscale;-webkit-font-smoothing:antialiased;display:inline-block;font-style:normal;font-variant:normal;text-rendering:auto;line-height:1}.fa-bicycle:before{content:"\f206"}.fa-check:before{content:"\f00c"}.fa-chevron-down:before{content:"\f078"}.fa-envelope-open:before{content:"\f2b6"}.fa-facebook:before{content:"\f09a"}.fa-flag:before{content:"\f024"}.fa-google:before{content:"\f1a0"}.fa-heart:before{content:"\f004"}.fa-laugh-beam:before{content:"\f59a"}.fa-map:before{content:"\f279"}.fa-map-marked-alt:before{content:"\f5a0"}.fa-mobile-alt:before{content:"\f3cd"}.fa-skiing:before{content:"\f7c9"}.fa-star:before{content:"\f005"}.fa-utensils:before{content:"\f2e7"}.fab{font-family:"Font Awesome 5 Brands"}.far{font-weight:400}.fa,.far,.fas{font-family:"Font Awesome 5 Free"}.fa,.fas{font-weight:900}
+.fa, .fab, .fal, .far, .fas {
+    -moz-osx-font-smoothing: grayscale;
+    -webkit-font-smoothing: antialiased;
+    display: inline-block;
+    font-style: normal;
+    font-variant: normal;
+    text-rendering: auto;
+    line-height: 1
+}
+
+.fa-bicycle:before {
+    content: "\f206"
+}
+
+.fa-check:before {
+    content: "\f00c"
+}
+
+.fa-chevron-down:before {
+    content: "\f078"
+}
+
+.fa-envelope-open:before {
+    content: "\f2b6"
+}
+
+.fa-facebook:before {
+    content: "\f09a"
+}
+
+.fa-flag:before {
+    content: "\f024"
+}
+
+.fa-google:before {
+    content: "\f1a0"
+}
+
+.fa-heart:before {
+    content: "\f004"
+}
+
+.fa-laugh-beam:before {
+    content: "\f59a"
+}
+
+.fa-map:before {
+    content: "\f279"
+}
+
+.fa-map-marked-alt:before {
+    content: "\f5a0"
+}
+
+.fa-mobile-alt:before {
+    content: "\f3cd"
+}
+
+.fa-skiing:before {
+    content: "\f7c9"
+}
+
+.fa-star:before {
+    content: "\f005"
+}
+
+.fa-utensils:before {
+    content: "\f2e7"
+}
+
+@font-face {
+    font-family: "Font Awesome 5 Brands";
+    font-style: normal;
+    font-weight: normal;
+    font-display: auto;
+    src: url(../webfonts/fa-brands-400.eot);
+    src: url(../webfonts/fa-brands-400.eot?#iefix) format("embedded-opentype"), url(../webfonts/fa-brands-400.woff2) format("woff2"), url(../webfonts/fa-brands-400.woff) format("woff"), url(../webfonts/fa-brands-400.ttf) format("truetype"), url(../webfonts/fa-brands-400.svg#fontawesome) format("svg")
+}
+
+.fab {
+    font-family: "Font Awesome 5 Brands"
+}
+
+@font-face {
+    font-family: "Font Awesome 5 Free";
+    font-style: normal;
+    font-weight: 400;
+    font-display: auto;
+    src: url(../webfonts/fa-regular-400.eot);
+    src: url(../webfonts/fa-regular-400.eot?#iefix) format("embedded-opentype"), url(../webfonts/fa-regular-400.woff2) format("woff2"), url(../webfonts/fa-regular-400.woff) format("woff"), url(../webfonts/fa-regular-400.ttf) format("truetype"), url(../webfonts/fa-regular-400.svg#fontawesome) format("svg")
+}
+
+.far {
+    font-weight: 400
+}
+
+@font-face {
+    font-family: "Font Awesome 5 Free";
+    font-style: normal;
+    font-weight: 900;
+    font-display: auto;
+    src: url(../webfonts/fa-solid-900.eot);
+    src: url(../webfonts/fa-solid-900.eot?#iefix) format("embedded-opentype"), url(../webfonts/fa-solid-900.woff2) format("woff2"), url(../webfonts/fa-solid-900.woff) format("woff"), url(../webfonts/fa-solid-900.ttf) format("truetype"), url(../webfonts/fa-solid-900.svg#fontawesome) format("svg")
+}
+
+.fa, .far, .fas {
+    font-family: "Font Awesome 5 Free"
+}
+
+.fa, .fas {
+    font-weight: 900
+}
